# cudd-ersatz

./: .gitignore  README.md  cudd-ersatz.cabal  stack.yaml
examples/: Count.hs  Counter.hs  Domino.hs  Poset.hs  Queens.hs  Sortnet.hs
src/Cudd/: Ersatz.hs
src/Cudd/Ersatz/Internal/: StableName.hs
